# glide-avif-decoder

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bumptech/glide/integration/avif/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bumptech/glide/integration/avif/sample/: AppGlide.kt  ImageTestActivity.kt
app/src/main/res/layout/: activity_image_test.xml
app/src/main/res/raw/: test_animated_avif.avif  test_avif.avif
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bumptech/glide/integration/avif/: ExampleUnitTest.kt
avif_decoder/: .gitignore  build.gradle  consumer-rules.pro  proguard-rules.pro
avif_decoder/src/main/: AndroidManifest.xml
avif_decoder/src/main/cpp/: CMakeLists.txt  avif_decoder_jni.c  avif_image_jni.c  avif_log.h  avif_util.c  avif_util.h  prebuild_libgav1.sh  version_script.txt
avif_decoder/src/main/java/com/bumptech/glide/integration/avif/: AvifBitmapResource.java  AvifByteBufferDecoder.java  AvifByteBufferSequenceDecoder.java  AvifOptions.java  AvifSequenceDrawableResource.java  AvifStreamDecoder.java  AvifStreamSequenceDecoder.java
avif_decoder/src/main/java/com/bumptech/glide/integration/avif/decoder/: AvifDecoder.java  AvifImage.java  AvifImageDetector.java  AvifSequenceDrawable.java
gradle/wrapper/: gradle-wrapper.properties
